
noinst_LTLIBRARIES = libapsr.la

nobase_include_HEADERS =  dsp/APSREightBit.h dsp/APSRFourBit.h dsp/APSRTwoBitCorrection.h dsp/apsr_unpack.h

libapsr_la_SOURCES =  APSREightBit.C APSRFourBit.C APSRTwoBitCorrection.C apsr_unpack.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

