
noinst_LTLIBRARIES = libapsr.la

nobase_include_HEADERS = dsp/APSREightBit.h dsp/APSRFourBit.h dsp/APSRTwoBitCorrection.h

libapsr_la_SOURCES = APSREightBit.C APSRFourBit.C APSRTwoBitCorrection.C apsr_unpack.C apsr_unpack.h

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

