
noinst_LTLIBRARIES = libapsr.la

nobase_include_HEADERS = dsp/APSRIterator.h dsp/APSRUnpacker.h \
	dsp/APSREightBit.h dsp/APSRFourBit.h dsp/APSRTwoBitCorrection.h

libapsr_la_SOURCES = APSRIterator.C \
	APSREightBit.C APSRFourBit.C APSRTwoBitCorrection.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

