
noinst_LTLIBRARIES = libbcpm.la

nobase_include_HEADERS = dsp/BCPMExtension.h dsp/BCPMFile.h \
	dsp/BCPMUnpacker.h dsp/bpphdr.h

libbcpm_la_SOURCES = BCPMExtension.C BCPMFile.C BCPMUnpacker.C indexx.f

check_PROGRAMS = test_header

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

