
noinst_LTLIBRARIES = libcpsr.la

nobase_include_HEADERS = dsp/CPSRFile.h dsp/CPSRTwoBitCorrection.h \
 dsp/FFD_Thresholds.h

# dsp/class.h dsp/cpsr_obs.h dsp/cpsrobsjoin.h dsp/ffd.h dsp/fptm_obs.h dsp/pspm++.h dsp/pspmDbase.h dsp/pspmXfer.h dsp/pspm_search_header.h dsp/quadruple.h dsp/rdisk.h dsp/xfer_tape.h

libcpsr_la_SOURCES = CPSRFile.C CPSRTwoBitCorrection.C FFD_Thresholds.C 

# cbrdump.C cpsr_Bit_Stream_FileLoader.C cpsrfin.C cpsrhead.C cpsrlog.C cpsrobsjoin.C cpsrobsjoin_lib.C cpsrtapelabel.C cpsrtapels.C cpsrx.C cpsrxfer.C fptm+cpsr.C fptm_obs.C mjd.C pspm.C pspmDbase.C pspmDbaseCreate.C pspmXfer.C pspm_headerlogls.C rdisk.C relevant.C source_match.C tapexfer.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

