
noinst_LTLIBRARIES = libcpsr.la

nobase_include_HEADERS = dsp/CPSRFile.h dsp/CPSRTwoBitCorrection.h

libcpsr_la_SOURCES = CPSRFile.C CPSRTwoBitCorrection.C \
	pspmDbase.C pspm.C mjd.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

