
noinst_LTLIBRARIES = libcpsr.la

nobase_include_HEADERS = dsp/CPSRFile.h dsp/CPSRTwoBitCorrection.h

libcpsr_la_SOURCES = CPSRFile.C CPSRTwoBitCorrection.C \
	pspmDbase.C pspmDbase.h pspm.C pspm++.h mjd.C class.h quadruple.h \
	pspm_search_header.h

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

