
noinst_LTLIBRARIES = libcpsr2.la

nobase_include_HEADERS =  dsp/BuddyFinder.h dsp/CPSR2File.h dsp/CPSR2FourBitUnpacker.h dsp/CPSR2TwoBitCorrection.h dsp/CPSR2_Observation.h dsp/ObsInfo.h dsp/cpsr2_header.h dsp/cpsr2_utils.h dsp/yamasaki_verify.h

libcpsr2_la_SOURCES =  BuddyFinder.C CPSR2File.C CPSR2FourBitUnpacker.C CPSR2TwoBitCorrection.C CPSR2_Observation.C FindBuddies.C ObsInfo.C cpsr2_change_header.C cpsr2_parse_header.C cpsr2_utils.C cpsr2head.C uniquename.C yamasaki_verify.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

