
noinst_LTLIBRARIES = libcpsr2.la

nobase_include_HEADERS = dsp/CPSR2File.h \
	dsp/CPSR2TwoBitCorrection.h dsp/CPSR2_Observation.h

libcpsr2_la_SOURCES = CPSR2File.C CPSR2TwoBitCorrection.C CPSR2_Observation.C \
	cpsr2_header.h yamasaki_verify.h yamasaki_verify.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

