
noinst_LTLIBRARIES = libdummy.la

nobase_include_HEADERS = dsp/DummyUnpacker.h \
              dsp/DummyFourBit.h 

libdummy_la_SOURCES = DummyUnpacker.C \
              DummyFourBit.C

#############################################################################

include $(top_srcdir)/config/Makefile.include

