
noinst_LTLIBRARIES = libemerlin.la

nobase_include_HEADERS =  dsp/EmerlinFile.h \
			  dsp/EmerlinUnpacker.h \
			  dsp/EmerlinTwoBitTable.h

libemerlin_la_SOURCES = EmerlinFile.C \
						EmerlinUnpacker.C \
						EmerlinTwoBitTable.C \
		     vdifio.c vdifio.h

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

