
noinst_LTLIBRARIES = libfadc.la

nobase_include_HEADERS = dsp/FadcFile.h dsp/FadcObservation.h \
	dsp/FadcTwoBitCorrection.h dsp/FadcUnpacker.h

libfadc_la_SOURCES = FadcFile.C FadcObservation.C \
	FadcTwoBitCorrection.C FadcUnpacker.C fadc_header.h

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

