
noinst_LTLIBRARIES = libgmrt.la

nobase_include_HEADERS = dsp/GMRTFile.h dsp/GMRTUnpacker.h \
	dsp/GMRTFilterbankFile.h dsp/GMRTFilterbank16.h

libgmrt_la_SOURCES = GMRTFile.C GMRTUnpacker.C data2rcv.h \
	GMRTFilterbankFile.C GMRTFilterbank16.C gmrt.c gmrt.h gmrt_params.h

#############################################################################
#

include $(top_srcdir)/config/Makefile.include
