
noinst_LTLIBRARIES = libgmrt.la

nobase_include_HEADERS = dsp/GMRTFile.h dsp/GMRTUnpacker.h \
	dsp/GMRTFilterbankFile.h dsp/GMRTFilterbank16.h \
	dsp/GMRTBinaryFile.h dsp/GMRTFourBit.h

libgmrt_la_SOURCES = GMRTFile.C GMRTUnpacker.C data2rcv.h \
	GMRTFilterbankFile.C GMRTFilterbank16.C gmrt.c gmrt_params.h \
	GMRTFourBit.C GMRTBinaryFile.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include
