
noinst_LTLIBRARIES = liblbadr.la

nobase_include_HEADERS =  dsp/SMRO.h dsp/SMROFile.h dsp/SMROTwoBitCorrection.h

liblbadr_la_SOURCES =  SMROFile.C SMROTwoBitCorrection.C lbastats.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

