
noinst_LTLIBRARIES = liblbadr64.la

nobase_include_HEADERS = dsp/LBADR64_File.h dsp/LBADR64_TwoBitCorrection.h

liblbadr64_la_SOURCES = LBADR64_File.C LBADR64_TwoBitCorrection.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

